rbd-mirror: don't reregister asok hook in process entry thread

It might get stuck if the asok is busy executing a command.
Instead kick status update, which will call reregister on finish.

Fixes: http://tracker.ceph.com/issues/24141
Signed-off-by: Mykola Golub <mgolub@suse.com>
(cherry picked from commit 43e50bd582ba2d1b66f55d7f8d2b7f030da99ee6)